@@ -9,6 +9,7 @@ char *k;
 __mf_set_options ("-sigusr1-report -print-leaks");
 k = (char *) malloc (100);
 raise (SIGUSR1);
+free (k);
 return 0;
 }
 /* { dg-output "Leaked object.*name=.malloc region.*objects: 1" } */
