@@ -4,7 +4,7 @@ libmudflap-init [find_gcc]
 dg-init
 
 global srcdir
-foreach flags [list {} {-static} {-O2} {-O3}] {
+foreach flags [list {} {-static -DSTATIC} {-O2} {-O3}] {
     foreach srcfile [lsort [glob -nocomplain ${srcdir}/libmudflap.cth/*.c]] {
 	set bsrc [file tail $srcfile]
 	setenv MUDFLAP_OPTIONS "-viol-segv"
